--- a/projects/school.html
+++ b/projects/school.html
@@ -53,7 +53,7 @@
       </div>
     </div>
 
-    <div class="row project" data-aos="fade-up">
+    <div class="row project" data-aos="zoom-in">
       <div class="col2">
           <img src="../images/wordnet.png" class="projectImage">
       </div>
@@ -80,22 +80,21 @@
       </div>
     </div>
 
-    <div class="row project" data-aos="fade-up">
+    <div class="row project" data-aos="zoom-in">
       <div class="col2">
-        <!-- <a href="http://www.cs.umd.edu/class/summer2017/cmsc131/Summer17Proj5/project5.html" target="_blank"> -->
           <img src="../images/shell_sr.png" class="projectImage">
-        <!-- </a> -->
       </div>
       <div class="col2">
         <div class="row">
           <span>
             <span class="projectTitle">Shell Sr.</span>
-          <sub class="projectDate">May 2018</sub>
+            <sub class="projectDate">May 2018</sub>
           </span>
         </div>
         <article>
-          Constructed a unix shell that would support boolean operations, piping,
-          forking, and file redirection.
+          Implemented the basic functionality of instrumental UNIX commands such as
+          cd, ls, pwd. This shell also supported boolean operations, piping, forking,
+          and file redirection.
         </article>
 
         <div class="technology-container">
@@ -107,23 +106,22 @@
       </div>
     </div>
 
-    <div class="row project" data-aos="fade-up">
+    <div class="row project" data-aos="zoom-in">
       <div class="col2">
-        <!-- <a href="http://www.cs.umd.edu/class/summer2017/cmsc131/Summer17Proj5/project5.html" target="_blank"> -->
           <img src="../images/document.jpg" class="projectImage">
-        <!-- </a> -->
       </div>
       <div class="col2">
         <div class="row">
           <span>
             <span class="projectTitle">Document Manager & User Interface</span>
-          <sub class="projectDate">March 2018</sub>
+            <sub class="projectDate">March 2018</sub>
           </span>
         </div>
         <article>
           Created a document manager program that allowed me to add paragraphs, lines
-          to paragraphs, to replace text and edit a document. Then I made a simple test
-          based UI that allowed others to interact with the document manager.
+          to paragraphs, replace the text or highlight the text of a text file.
+          Then I made a simple test based UI that allowed others to interact with
+          the document manager.
         </article>
 
         <div class="technology-container">
@@ -135,17 +133,15 @@
       </div>
     </div>
 
-    <div class="row project" data-aos="fade-up">
+    <div class="row project" data-aos="zoom-in">
       <div class="col2">
-        <!-- <a href="http://www.cs.umd.edu/class/summer2017/cmsc131/Summer17Proj5/project5.html" target="_blank"> -->
           <img src="../images/graphs.png" class="projectImage">
-        <!-- </a> -->
       </div>
       <div class="col2">
         <div class="row">
           <span>
             <span class="projectTitle">Graphs</span>
-          <sub class="projectDate">December 2017</sub>
+            <sub class="projectDate">December 2017</sub>
           </span>
         </div>
         <article>
@@ -162,17 +158,15 @@
       </div>
     </div>
 
-    <div class="row project" data-aos="fade-up">
+    <div class="row project" data-aos="zoom-in">
       <div class="col2">
-        <!-- <a href="http://www.cs.umd.edu/class/summer2017/cmsc131/Summer17Proj5/project5.html" target="_blank"> -->
           <img src="../images/order_processor.jpg" class="projectImage">
-        <!-- </a> -->
       </div>
       <div class="col2">
         <div class="row">
           <span>
             <span class="projectTitle">Order Processor</span>
-          <sub class="projectDate">November 2017</sub>
+            <sub class="projectDate">November 2017</sub>
           </span>
         </div>
         <article>
@@ -192,24 +186,22 @@
       </div>
     </div>
 
-    <div class="row project" data-aos="fade-up">
+    <div class="row project" data-aos="zoom-in">
       <div class="col2">
-        <!-- <a href="http://www.cs.umd.edu/class/summer2017/cmsc131/Summer17Proj5/project5.html" target="_blank"> -->
           <img src="../images/clear_cell_game.png" class="projectImage">
-        <!-- </a> -->
       </div>
       <div class="col2">
         <div class="row">
           <span>
             <span class="projectTitle">Clear Cell Game</span>
-          <sub class="projectDate">September 2017</sub>
+            <sub class="projectDate">September 2017</sub>
           </span>
         </div>
         <article>
           Implemented the back-end logic for the clear cell game. The game's goal is to
           maximize the number of clear cells in a colored bored. I had to randomly generate new
-          colors to be dropped from the top, destroy the current cell along with all the other cells
-          that were had the color clicked were adjacent to a collapsed cell, and keep track of the
+          colors to be dropped from the top, collapse the cell clicked on along with all the other cells
+          that had the same color that were adjacent to a collapsed cell, and keep track of the
           score of the user which was based on the number of cells collapsed before a colored cell
           hit the bottom of the screen.
         </article>
@@ -223,7 +215,7 @@
       </div>
     </div>
 
-    <div class="row project" data-aos="fade-up">
+    <div class="row project" data-aos="zoom-in">
       <div class="col2">
         <a href="http://www.cs.umd.edu/class/summer2017/cmsc131/Summer17Proj5/project5.html" target="_blank">
           <img src="../images/poker_simulator.png" class="projectImage">
@@ -233,7 +225,7 @@
         <div class="row">
           <span>
             <span class="projectTitle">Poker Simulator</span>
-          <sub class="projectDate">July 2017</sub>
+            <sub class="projectDate">July 2017</sub>
           </span>
         </div>
         <article>
@@ -252,7 +244,7 @@
       </div>
     </div>
 
-    <div class="row project" data-aos="fade-up">
+    <div class="row project" data-aos="zoom-in">
       <div class="col2">
         <a href="http://www.cs.umd.edu/class/summer2017/cmsc131/Summer17Proj4/Proj4.html" target="_blank">
           <img src="../images/mandelbrot_set.png" class="projectImage">
@@ -262,16 +254,16 @@
         <div class="row">
           <span>
             <span class="projectTitle">Mandelbrot Set</span>
-          <sub class="projectDate">July 2017</sub>
+            <sub class="projectDate">July 2017</sub>
           </span>
         </div>
         <article>
-          Implemented a ComplexNumber class which could get the real and imaginary
-          components of a complex number and perform the four basic operations of
+          Implemented a ComplexNumber class which had real and imaginary
+          instance variables to simulate the components of a complex number and perform the four basic operations of
           elementary arithmetic (add, subtract, multiply, & divide) on complex numbers.
-          I also implemented a MandelbrotTools class which had a method to compare a
-          complex number with a divergence boundary to check if it is too big or not and
-          divergence method which took in a complex number, then calculated a sequence of complex
+          I also implemented a MandelbrotTools class which had a could compare a
+          complex number with a divergence boundary to check if it was too big or not. This class could also
+          take in a complex number, and then calculate a sequence of complex
           numbers until one of the terms in the sequence became greater than the
           divergence boundary.
         </article>
@@ -285,7 +277,7 @@
       </div>
     </div>
 
-    <div class="row project" data-aos="fade-up">
+    <div class="row project" data-aos="zoom-in">
       <div class="col2">
         <a href="http://www.cs.umd.edu/class/summer2017/cmsc131/Summer17Proj3/Proj3.html" target="_blank">
           <img src="../images/medieval_soldier.png" class="projectImage">
@@ -295,17 +287,17 @@
         <div class="row">
           <span>
             <span class="projectTitle">Medieval Soldier</span>
-          <sub class="projectDate">July 2017</sub>
+            <sub class="projectDate">July 2017</sub>
           </span>
         </div>
         <article>
-          I had to implement a class which defined the characteristics and behavior of
+          Implemented a class which defined the characteristics and behavior of
           a soldier. This basic soldier class defined if the soldier could move, found the
-          total number of enemies remaining, the distance from the it to a specific position,
-          and the direction to the nearest friend or enemy. This class also defined a performMyTurn()
-          method which was the heart of my soldier's "AI". It decided the soldiers next action
-          based on the battlefield. Sadly, I was never able to defeat my teacher's super soldiers &#9785;
-          This is my greatest downfall!
+          total number of enemies remaining, the distance from itself to a specific position,
+          and the direction to the nearest friend or enemy. This class also defined a
+          performMyTurn() method which was the heart of my soldier's
+          "AI". It decided the soldier's next action based on the battlefield. Sadly, I was never
+          able to defeat my teacher's super soldiers &#9785; This is my greatest downfall!
         </article>
 
         <div class="technology-container">
@@ -317,7 +309,7 @@
       </div>
     </div>
 
-    <div class="row project" id="footer" data-aos="fade-up">
+    <div class="row project" id="footer" data-aos="zoom-in">
       <div class="col2">
         <a href="http://www.cs.umd.edu/class/summer2017/cmsc131/Summer17Proj0/Proj0.html" target="_blank">
           <img src="../images/hello_world.png" class="projectImage">
@@ -327,7 +319,7 @@
         <div class="row">
           <span>
             <span class="projectTitle">Hello World</span>
-          <sub class="projectDate">June 2017</sub>
+            <sub class="projectDate">June 2017</sub>
           </span>
         </div>
         <article>
@@ -349,7 +341,9 @@
   <script>
     AOS.init({
       once: true,
-      duration: 1000,
+      duration: 1500,
+      ease: "ease-in-sine",
+      offset: 75
     });
   </script>
 
@@ -359,9 +353,10 @@
     var $root = $('html, body');
 
     $('a[href^="#"]').click(function(){
+      console.log(AOS);
       $root.animate({
         scrollTop: $($.attr(this, "href")).offset().top
-      }, 4000)
+      }, 1500)
       return false;
     })
   </script>
