--- a/projects/udemy.html
+++ b/projects/udemy.html
@@ -60,7 +60,7 @@
       <div class="col2">
         <div class="row">
           <span>
-            <span>Manager</span>
+            <span class="projectTitle">Manager</span>
             <sub class="projectDate">June 2018</sub>
           </span>
         </div>
@@ -92,7 +92,7 @@
       <div class="col2">
         <div class="row">
           <span>
-            <span>Tech Stack</span>
+            <span class="projectTitle">Tech Stack</span>
             <sub class="projectDate">June 2018</sub>
           </span>
         </div>
