Updated personal website to be a blog

--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
   <body>
 
     <script src="./js/pdfobject.min.js"></script>
-    <script>PDFObject.embed("./pdf/CHIDI_2020_RESUME.pdf")</script>
+    <script>PDFObject.embed("./pdf/CHIDI_RESUME_3.1.pdf")</script>
 
   </body>
 </html>
