Updated for mobile

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <!-- ---------------------------------------------------- -->
 
                         <!-- BLOG POST MODAL 1 -->
-                        <div class="modal fade" id="blogPost1" tabindex="-1" role="dialog"
+                        <div class="modal fade center-modal" id="blogPost1" tabindex="-1" role="dialog"
                             aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog mw-100 w-75" role="document">
                                 <div class="modal-content">
