Upgraded For Mobile

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </div>
 
                     <!-- THEME TOGGLE -->
-                    <div class="col-3 toggle-container right">
+                    <div class="col-3 right">
                         <div class="custom-control custom-switch custom-switch-adaptive">
                             <input type="checkbox" class="custom-control-input" id="customSwitch1">
                             <label class="custom-control-label" for="customSwitch1" id="customSwitch1Label">&rarr;</label>
