Updated first blog post

--- a/blog_posts/endeavor.html
+++ b/blog_posts/endeavor.html
@@ -26,7 +26,7 @@
                 <div class="row justify-content-center">
                     <!-- BLOG TITLE -->
                     <div class="col-9 center">
-                        <a class="title" href="../index">Endeavor</a>
+                        <a class="title" href="../">Endeavor</a>
 
                         <!-- ---------------------------------------------------- -->
                         <!--                        BLOG POST                     -->
