Updated grammar to be consistent

--- a/blog_posts/endeavor.html
+++ b/blog_posts/endeavor.html
@@ -59,7 +59,7 @@
                                     because I didn't want to quit. A few weeks later I found myself at a hackathon with my fraternity brother, and everything 
                                     changed. For context, a <b>hackathon</b> is a design sprint-like event where people with technical backgrounds come together, form teams, 
                                     and make cool stuff. I was amazed by what I saw. Cools apps and hardware products were made right before my eyes. Honestly, 
-                                    it felt like a movie scene. Me and my brother built a magic mirror during that hackathon. I probably did about .5% of anything 
+                                    it felt like a movie scene. Me and my fraternity brother built a magic mirror during that hackathon. I probably did about .5% of anything 
                                     for the project, but the effect it had on me was drastic. I wanted to build things from scratch like I witnessed during the hackathon. 
                                     I later decided to move from computer engineering to computer science as my interest had geared toward software.
                                 </p>
@@ -75,7 +75,7 @@
                                     would take down notes on the things they deemed necessary. Articles would vary about
                                     some of the necessary skills, but from a high level, they were consistent. I
                                     had no prior web development skills and really only chose that path because of my
-                                    roommate, the person who helped me find the joy in programming. I would look at
+                                    fraternity brother, the person who helped me find the joy in programming. I would look at
                                     random things about HTML and CSS, and do it myself, but I felt like everything I
                                     made
                                     was trash. I found myself on YouTube a lot watching videos like "How you can land a
