--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <div class="intro">
                             <div class="intro-opener">
                                 <a class="title" href="./index">Endeavor</a>
-                                <p>An Attempt To Acheive A Goal</p>
+                                <p>An Attempt To Achieve A Goal</p>
                             </div>
                             <p>Personal Blog by Chidi Udeze</p>
                         </div>
